--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .card svg{
+        transform: scale(0.4);
+    }
+}
